docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jx2p8yzxvcz3nttb7deywctp
branchName: main
commitSha: d8947401470c3935d6cf5e23ebbb7039d3bd9b64
commitUrl: https://github.com/Redocly/redocly/commit/d8947401470c3935d6cf5e23ebbb7039d3bd9b64

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,18 @@
 '@redocly/realm':
+  0.122.0-next.13:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch:
+        - Updated the `dompurify` library to patch the `CVE-2025-48050` security vulnerability.
+        - Improved Markdoc tag error reporting for missing quotation marks.
+        - >-
+          Fixed RBAC conditional content visibility in search by restricting `Markdoc` conditional tags based on team permissions to prevent
+          unauthorized access.
+    dependencies:
+      '@redocly/openapi-docs': 3.10.0-next.9
+      '@redocly/asyncapi-docs': 0.3.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.7.0-next.9
   0.122.0-next.12:
     timestamp: 1749126205000
     changes:
@@ -3135,6 +3149,20 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.122.0-next.13:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch:
+        - Updated the `dompurify` library to patch the `CVE-2025-48050` security vulnerability.
+        - Improved Markdoc tag error reporting for missing quotation marks.
+        - >-
+          Fixed RBAC conditional content visibility in search by restricting `Markdoc` conditional tags based on team permissions to prevent
+          unauthorized access.
+    dependencies:
+      '@redocly/openapi-docs': 3.10.0-next.9
+      '@redocly/asyncapi-docs': 0.3.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.7.0-next.9
   0.122.0-next.12:
     timestamp: 1749126205000
     changes:
@@ -5606,6 +5634,20 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.122.0-next.13:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch:
+        - Updated the `dompurify` library to patch the `CVE-2025-48050` security vulnerability.
+        - Improved Markdoc tag error reporting for missing quotation marks.
+        - >-
+          Fixed RBAC conditional content visibility in search by restricting `Markdoc` conditional tags based on team permissions to prevent
+          unauthorized access.
+    dependencies:
+      '@redocly/openapi-docs': 3.10.0-next.9
+      '@redocly/asyncapi-docs': 0.3.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.7.0-next.9
   0.122.0-next.12:
     timestamp: 1749126205000
     changes:
@@ -8081,6 +8123,16 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.122.0-next.13:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch:
+        - Updated the `dompurify` library to patch the `CVE-2025-48050` security vulnerability.
+    dependencies:
+      '@redocly/openapi-docs': 3.10.0-next.9
+      '@redocly/asyncapi-docs': 0.3.0-next.9
+      '@redocly/portal-plugin-mock-server': 0.7.0-next.9
   0.122.0-next.12:
     timestamp: 1749126205000
     changes:
@@ -12324,6 +12376,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.10.0-next.9:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch:
+        - Updated the `dompurify` library to patch the `CVE-2025-48050` security vulnerability.
+    dependencies: {}
   3.10.0-next.8:
     timestamp: 1748617646000
     changes:
@@ -15249,6 +15308,16 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.5.0-next.13:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.122.0-next.13
+      '@redocly/redoc': 0.122.0-next.13
+      '@redocly/redoc-reef': 0.122.0-next.13
+      '@redocly/redoc-revel': 0.122.0-next.13
   1.5.0-next.12:
     timestamp: 1749126205000
     changes:
@@ -18247,6 +18316,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.7.0-next.9:
+    timestamp: 1749215569000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.10.0-next.9
   0.7.0-next.8:
     timestamp: 1748617646000
     changes:
