--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -22961,3 +22961,11 @@ reunite:
       patch:
         - Updated `@redocly/openapi-core` dependency to version `0.0.0-snapshot.1748969604`.
     dependencies: {}
+  v2025-06-09.1:
+    timestamp: 1749458502000
+    changes:
+      minor: []
+      patch:
+        - Implemented organization-specific branding on authentication screens.
+        - Fixed fetching auto-merge errors on the Remote Content page.
+    dependencies: {}
