add multiple api article and sidebar in open source repo

--- a/learn/arazzo/sidebars.yaml
+++ b/learn/arazzo/sidebars.yaml
@@ -7,3 +7,4 @@
 - page: ./success-criteria-and-failure-handling.md
 - page: ./linting-arazzo-workflows.md
 - page: ./testing-arazzo-workflows.md
+- page: ./documenting-multiple-apis-using-arazzo.md
