--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,20 @@
 '@redocly/realm':
+  0.123.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+        - Fixed performance issue in the `Tabs` component.
+        - Improved validation of unclosed quotes in `markdoc` attributes.
+    dependencies:
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.0
+      '@redocly/portal-legacy-ui': 0.6.0-next.0
+      '@redocly/asyncapi-docs': 0.4.0-next.0
+      '@redocly/graphql-docs': 0.12.0-next.0
+      '@redocly/openapi-docs': 3.11.0-next.0
+      '@redocly/theme': 0.55.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
     timestamp: 1749548911000
     changes:
@@ -3228,6 +3244,22 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+        - Fixed performance issue in the `Tabs` component.
+        - Improved validation of unclosed quotes in `markdoc` attributes.
+    dependencies:
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.0
+      '@redocly/portal-legacy-ui': 0.6.0-next.0
+      '@redocly/asyncapi-docs': 0.4.0-next.0
+      '@redocly/graphql-docs': 0.12.0-next.0
+      '@redocly/openapi-docs': 3.11.0-next.0
+      '@redocly/theme': 0.55.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
     timestamp: 1749548911000
     changes:
@@ -5774,6 +5806,22 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+        - Fixed performance issue in the `Tabs` component.
+        - Improved validation of unclosed quotes in `markdoc` attributes.
+    dependencies:
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.0
+      '@redocly/portal-legacy-ui': 0.6.0-next.0
+      '@redocly/asyncapi-docs': 0.4.0-next.0
+      '@redocly/graphql-docs': 0.12.0-next.0
+      '@redocly/openapi-docs': 3.11.0-next.0
+      '@redocly/theme': 0.55.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
     timestamp: 1749548911000
     changes:
@@ -8320,6 +8368,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+        - Fixed performance issue in the `Tabs` component.
+    dependencies:
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.0
+      '@redocly/portal-legacy-ui': 0.6.0-next.0
+      '@redocly/asyncapi-docs': 0.4.0-next.0
+      '@redocly/graphql-docs': 0.12.0-next.0
+      '@redocly/openapi-docs': 3.11.0-next.0
+      '@redocly/theme': 0.55.0-next.0
+      '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.122.0:
     timestamp: 1749548911000
     changes:
@@ -10861,6 +10924,16 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+        - Fixed performance issue in the `Tabs` component.
+        - Added CSS variables to highlight path parameters in `Replay`.
+    dependencies:
+      '@redocly/realm-asyncapi-sdk': 0.1.0-next.0
   0.54.0:
     timestamp: 1749548911000
     changes:
@@ -12684,6 +12757,15 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/replay': 0.14.0-next.0
+      '@redocly/theme': 0.55.0-next.0
   3.10.0:
     timestamp: 1749548911000
     changes:
@@ -14749,6 +14831,14 @@
       patch: []
     dependencies: {}
 '@redocly/graphql-docs':
+  0.12.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.0
   0.11.0:
     timestamp: 1749548911000
     changes:
@@ -15585,6 +15675,13 @@
         - Redocly Mock Server release
     dependencies: {}
 '@redocly/portal-legacy-ui':
+  0.6.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies: {}
   0.5.0:
     timestamp: 1749548911000
     changes:
@@ -15660,6 +15757,18 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/redoc-revel': 0.123.0-next.0
+      '@redocly/redoc-reef': 0.123.0-next.0
+      '@redocly/realm': 0.123.0-next.0
+      '@redocly/redoc': 0.123.0-next.0
+      '@redocly/theme': 0.55.0-next.0
   1.5.0:
     timestamp: 1749548911000
     changes:
@@ -18691,6 +18800,14 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.0
   0.7.0:
     timestamp: 1749548911000
     changes:
@@ -20385,6 +20502,16 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor:
+        - Added highlighting for path parameters in request URLs.
+        - Replaced variables with servers and inputs for Arazzo format compatibility. Added `Path` tab to edit request path parameters.
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.0
   0.13.0:
     timestamp: 1749548911000
     changes:
@@ -21232,6 +21359,14 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.0:
+    timestamp: 1749636110000
+    changes:
+      minor: []
+      patch:
+        - Enter prerelease mode.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.0
   0.5.0:
     timestamp: 1749548911000
     changes:
