docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxfgwgqxmstqknfy7cxs6e3j
branchName: main
commitSha: 8e4b9064c56894c460866bd085af72dd7e57996b
commitUrl: https://github.com/Redocly/redocly/commit/8e4b9064c56894c460866bd085af72dd7e57996b

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -14468,6 +14468,13 @@
     dependencies:
       '@redocly/theme': 0.6.0
 '@redocly/config':
+  0.26.1:
+    timestamp: 1749646162000
+    changes:
+      minor: []
+      patch:
+        - Added support for the `extends` property in the Redocly config schema.
+    dependencies: {}
   0.26.0:
     timestamp: 1749026344000
     changes:
