docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxmrdf479yb1hqnzfp9g8djm
branchName: main
commitSha: e5e6ce36789b58b30d76becb74d85a0a7e849ed7
commitUrl: https://github.com/Redocly/redocly/commit/e5e6ce36789b58b30d76becb74d85a0a7e849ed7

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,21 @@
 '@redocly/realm':
+  0.123.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor:
+        - Exposed `usePageVersions` and `usePageActiveVersion` hooks to access the current page version in React pages.
+      patch:
+        - Fixed detection of changes in partial folders.
+        - Changed the default keyboard shortcut to open Search to `Cmd+K`/`Ctrl+K`.
+        - Improved accessibility by adding descriptive `alt` text to footer icons.
+        - Fixed relative link issues in frontmatter for `Markdoc` tags.
+        - Fixed an issue where the Markdoc variable `$remoteAddr` returned incorrect values.
+    dependencies:
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/theme': 0.55.0-next.1
+      '@redocly/asyncapi-docs': 0.4.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
     timestamp: 1749653836000
     changes:
@@ -3257,6 +3274,23 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor:
+        - Exposed `usePageVersions` and `usePageActiveVersion` hooks to access the current page version in React pages.
+      patch:
+        - Fixed detection of changes in partial folders.
+        - Changed the default keyboard shortcut to open Search to `Cmd+K`/`Ctrl+K`.
+        - Improved accessibility by adding descriptive `alt` text to footer icons.
+        - Fixed relative link issues in frontmatter for `Markdoc` tags.
+        - Fixed an issue where the Markdoc variable `$remoteAddr` returned incorrect values.
+    dependencies:
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/theme': 0.55.0-next.1
+      '@redocly/asyncapi-docs': 0.4.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
     timestamp: 1749653836000
     changes:
@@ -5832,6 +5866,23 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor:
+        - Exposed `usePageVersions` and `usePageActiveVersion` hooks to access the current page version in React pages.
+      patch:
+        - Fixed detection of changes in partial folders.
+        - Changed the default keyboard shortcut to open Search to `Cmd+K`/`Ctrl+K`.
+        - Improved accessibility by adding descriptive `alt` text to footer icons.
+        - Fixed relative link issues in frontmatter for `Markdoc` tags.
+        - Fixed an issue where the Markdoc variable `$remoteAddr` returned incorrect values.
+    dependencies:
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/theme': 0.55.0-next.1
+      '@redocly/asyncapi-docs': 0.4.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
     timestamp: 1749653836000
     changes:
@@ -8407,6 +8458,21 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch:
+        - Changed the default keyboard shortcut to open Search to `Cmd+K`/`Ctrl+K`.
+        - Improved accessibility by adding descriptive `alt` text to footer icons.
+        - Fixed relative link issues in frontmatter for `Markdoc` tags.
+        - Fixed an issue where the Markdoc variable `$remoteAddr` returned incorrect values.
+    dependencies:
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/theme': 0.55.0-next.1
+      '@redocly/asyncapi-docs': 0.4.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.1
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.1
   0.122.1:
     timestamp: 1749653836000
     changes:
@@ -10975,6 +11041,15 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor:
+        - Exposed `usePageVersions` and `usePageActiveVersion` hooks to access the current page version in React pages.
+      patch:
+        - Changed the default keyboard shortcut to open Search to `Cmd+K`/`Ctrl+K`.
+        - Improved accessibility by adding descriptive `alt` text to footer icons.
+    dependencies: {}
   0.54.1:
     timestamp: 1749653836000
     changes:
@@ -12815,6 +12890,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.1
   3.10.1:
     timestamp: 1749653836000
     changes:
@@ -14903,6 +14985,13 @@
       patch: []
     dependencies: {}
 '@redocly/graphql-docs':
+  0.12.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor:
+        - Added support for displaying deprecated queries, mutations, and subscriptions in the GraphQL documentation.
+      patch: []
+    dependencies: {}
   0.12.0-next.0:
     timestamp: 1749636110000
     changes:
@@ -15829,6 +15918,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/realm': 0.123.0-next.1
+      '@redocly/redoc-reef': 0.123.0-next.1
+      '@redocly/redoc-revel': 0.123.0-next.1
+      '@redocly/theme': 0.55.0-next.1
+      '@redocly/redoc': 0.123.0-next.1
   1.5.1:
     timestamp: 1749653836000
     changes:
@@ -18883,6 +18983,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.1
   0.7.1:
     timestamp: 1749653836000
     changes:
@@ -20592,6 +20699,13 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.1
   0.13.1:
     timestamp: 1749653836000
     changes:
@@ -21456,6 +21570,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.1:
+    timestamp: 1749821473000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.1
   0.5.1:
     timestamp: 1749653836000
     changes:
