docs(bh): adds user profile menu docs, updates sidebar (#16047)
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxqp0g8mq8mv0j1kzhv39fnk
branchName: main
commitSha: d85dc5ce6a76620433ad1f80144669da084620c7
commitUrl: https://github.com/Redocly/redocly/commit/d85dc5ce6a76620433ad1f80144669da084620c7

--- a/docs/realm/sidebars.yaml
+++ b/docs/realm/sidebars.yaml
@@ -133,6 +133,10 @@
     - page: setup/reference/telemetry.md
       label: Telemetry
 
+    - separator: User account
+    - page: author/how-to/user-profile-menu.md
+      label: User profile menu
+      
 - group: Content
   items:
     - page: author/concepts/project-structure.md
@@ -283,7 +287,6 @@
     - page: setup/how-to/realm-version.md
       label: Upgrade Realm version
 
-
 - group: Branding
   items:
     - page: style/concepts/styling.md
@@ -351,9 +354,6 @@
       items:
         - page: author/how-to/multiple-products.md
           label: Add multiple products
-
-
-
 
 
 - group: Customization
