docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxw9cp3ctkmyeygp45x0b0d8
branchName: main
commitSha: e548157e923fecfa3d80e363ac852aa9f1e2d657
commitUrl: https://github.com/Redocly/redocly/commit/e548157e923fecfa3d80e363ac852aa9f1e2d657

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -23846,3 +23846,10 @@ reunite:
         - Implemented organization-specific branding on authentication screens.
         - Fixed fetching auto-merge errors on the Remote Content page.
     dependencies: {}
+  v2025-06-16.1:
+    timestamp: 1750072259000
+    changes:
+      minor: []
+      patch:
+        - Configured `AssertionConsumerServiceURL` for SAML to use the correct value instead of the default first entry.
+    dependencies: {}
