docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxw9pd1p08cw4z379n67tdwp
branchName: main
commitSha: cc3181f766a894abbe71a77c579653a0aa1de8cf
commitUrl: https://github.com/Redocly/redocly/commit/cc3181f766a894abbe71a77c579653a0aa1de8cf

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -23852,4 +23852,5 @@ reunite:
       minor: []
       patch:
         - Configured `AssertionConsumerServiceURL` for SAML to use the correct value instead of the default first entry.
+        - Fixed project build failure when `redocly.yaml` was missing.
     dependencies: {}
