docs(all): Update changelog [skip ci]
Signed-off-by: GitHub Actions <41898282+github-actions[bot]@users.noreply.github.com>
remoteId: rem_01jwbtfqhbbam07z9j9m0etng6
remoteUpdateId: grupd_01jxwmtey46fv4spjv7evkdcr6
branchName: main
commitSha: 35e68dda1f9df21fd09da4ab1132280f7c08e8a7
commitUrl: https://github.com/Redocly/redocly/commit/35e68dda1f9df21fd09da4ab1132280f7c08e8a7

--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -23853,3 +23853,10 @@ reunite:
       patch:
         - Configured `AssertionConsumerServiceURL` for SAML to use the correct value instead of the default first entry.
     dependencies: {}
+  v2025-06-16.3:
+    timestamp: 1750080983000
+    changes:
+      minor: []
+      patch:
+        - Fixed project build failure when `redocly.yaml` was missing.
+    dependencies: {}
