--- a/docs/realm/changelogs.yaml
+++ b/docs/realm/changelogs.yaml
@@ -1,4 +1,17 @@
 '@redocly/realm':
+  0.123.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor:
+        - Improved trigger points for `code-walkthrough` steps.
+      patch:
+        - Renamed `usePageActiveVersion` hook to `useActivePageVersion`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
+      '@redocly/asyncapi-docs': 0.4.0-next.3
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.3
   0.123.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -3287,6 +3300,18 @@
       '@redocly/openapi-docs': 3.0.0-alpha.67
       '@redocly/portal-plugin-mock-server': 0.0.59
 '@redocly/reef':
+  0.123.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch:
+        - Renamed `usePageActiveVersion` hook to `useActivePageVersion`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
+      '@redocly/asyncapi-docs': 0.4.0-next.3
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.3
   0.123.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -5891,6 +5916,19 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/revel':
+  0.123.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor:
+        - Improved trigger points for `code-walkthrough` steps.
+      patch:
+        - Renamed `usePageActiveVersion` hook to `useActivePageVersion`.
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
+      '@redocly/asyncapi-docs': 0.4.0-next.3
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.3
   0.123.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -8495,6 +8533,17 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/redoc':
+  0.123.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
+      '@redocly/asyncapi-docs': 0.4.0-next.3
+      '@redocly/graphql-docs': 0.12.0-next.1
+      '@redocly/openapi-docs': 3.11.0-next.3
+      '@redocly/portal-plugin-mock-server': 0.8.0-next.3
   0.123.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -11091,6 +11140,14 @@
     dependencies:
       '@redocly/portal-plugin-mock-server': 0.1.0
 '@redocly/theme':
+  0.55.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor:
+        - Improved trigger points for `code-walkthrough` steps.
+      patch:
+        - Renamed `usePageActiveVersion` hook to `useActivePageVersion`.
+    dependencies: {}
   0.55.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -12947,6 +13004,13 @@
         - 'Improve "LastUpdated" component: support `format` and improve print styling'
     dependencies: {}
 '@redocly/openapi-docs':
+  3.11.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/replay': 0.14.0-next.3
   3.11.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -15983,6 +16047,17 @@
       patch: []
     dependencies: {}
 '@redocly/portal-plugin-async-api':
+  1.6.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
+      '@redocly/realm': 0.123.0-next.3
+      '@redocly/redoc-revel': 0.123.0-next.3
+      '@redocly/redoc-reef': 0.123.0-next.3
+      '@redocly/redoc': 0.123.0-next.3
   1.6.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -19059,6 +19134,13 @@
     dependencies:
       '@redocly/portal': 0.26.0
 '@redocly/portal-plugin-mock-server':
+  0.8.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/openapi-docs': 3.11.0-next.3
   0.8.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -20782,6 +20864,14 @@
     dependencies:
       '@redocly/mock-server': 0.0.3
 '@redocly/replay':
+  0.14.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch:
+        - 'Fixed missing boundary in `content-type: multipart/form-data` header.'
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
   0.14.0-next.2:
     timestamp: 1750043732000
     changes:
@@ -21660,6 +21750,13 @@
     dependencies:
       '@redocly/theme': 0.37.0
 '@redocly/theme-experimental':
+  0.6.0-next.3:
+    timestamp: 1750087903000
+    changes:
+      minor: []
+      patch: []
+    dependencies:
+      '@redocly/theme': 0.55.0-next.3
   0.6.0-next.2:
     timestamp: 1750043732000
     changes:
